2009-01-08  Zoltan Varga  <vargaz@gmail.com>

	* README: Add a status section.

2008-12-02  Peter Johanson  <peter@peterjohanson.com>

	* gui/gtk/CoverageView.cs:
	* gui/gtk/MonoCov.cs: small enhancements to the gtk# UI.

2008-07-15  Sandy Armstrong  <sanfordarmstrong@gmail.com>

	* CoverageModel.cs, symbols.cs: Update to build against latest code
	in Mono.CompilerServices.SymbolWriter.

2007-04-24  Zoltan Varga  <vargaz@gmail.com>

	* gui/gtk/CoverageView.cs: Applied patch from
	Valentin Sawadski <valentin.sawadski@gmx.de>. Add color coding to the
	coverage tree.

2007-04-23  Zoltan Varga  <vargaz@gmail.com>

	* coverage.c: Applied patch from 
	Valentin Sawadski <valentin.sawadski@gmx.de>. Fix handling of generic
	types.

2007-04-21  Zoltan Varga  <vargaz@gmail.com>

	* coverage.c (output_method): Escape classname as well.

Thu Nov 30 17:36:43 CET 2006 Paolo Molaro <lupus@ximian.com>

	* gui/gtk/SourceWindow.cs: work around Gtk bug.
	* coverage.c: disable domain unload for now and make sure
	methods names are encoded correctly in the XML file.

Thu Nov 30 12:15:03 CET 2006 Paolo Molaro <lupus@ximian.com>

	* Ship a Cecil binary in the source tarball. Added a
	configure option to specify a Cecil binary.
	* style.xsl: fixed mangling of hrefs.

Mon Nov 27 13:47:24 CET 2006 Paolo Molaro <lupus@ximian.com>

	* UI updates. Removed unused dependency on gnome-sharp.
	Upped version.

Fri Nov 24 20:09:05 CET 2006 Paolo Molaro <lupus@ximian.com>

	* Fixes and manpage added.

Fri Nov 24 19:41:04 CET 2006 Paolo Molaro <lupus@ximian.com>

	* XmlExporter.cs: deal with nested types by changing slashes
	into dots in filenames.

Fri Nov 24 17:01:27 CET 2006 Paolo Molaro <lupus@ximian.com>

	* Makefile, configure: added configure script and install/dist target.
	* coverage.c: updated to not require access to mono internals.

Fri Nov 24 16:25:51 CET 2006 Paolo Molaro <lupus@ximian.com>

	* CoverageModel.cs: updated to use Cecil to load assemblies