@@ -1,3 +1,7 @@
+2010-12-28  Andreas Windischer
+
+	* gui/gtk/MonoCov.cs: catch file open error.
+
 2009-01-08  Zoltan Varga  <vargaz@gmail.com>
 
 	* README: Add a status section.
